--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "2.5.1",
+    "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.0",
     "react-native-screens": "^3.22.1",
     "react-native-stopwatch-timer": "0.0.21",
