--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/geolocation": "3.0.6",
     "@react-native/metro-config": "^0.72.9",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.9.12",
     "@reduxjs/toolkit": "1.9.5",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "2.5.1",
     "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.0",
     "react-native-screens": "^3.22.1",
     "react-native-stopwatch-timer": "0.0.21",
