--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.71.6",
     "react-native-canvas": "0.1.38",
     "react-native-collapsible": "^1.6.1",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "2.5.1",
     "react-native-paper": "^5.9.1",
